<resources>
    <string name="app_name">EchoSafeGUIVersion1.0</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="self_defense_heading">7 Self-Defense Techniques for Women Recommended by a Professional</string>
    <string name="sub_heading">Victor Lyalko, the acclaimed martial arts master, wrote a book where he described the most effective methods of self-defense to help women if they are attacked.</string>

    <!-- Step 1 -->
    <string name="tip1_title">1. For starters, memorize the vulnerable places.</string>
    <string name="tip1_content">It doesn’t matter how big or heavy your attacker is because you can beat anyone if you know where the most vulnerable spots are. The main ones are the eyes, nose, throat, chest, knees, and groin. You can attack in any way you want, but to be on the safe side, you need to remember that the most effective moves are aimed at these areas.</string>

    <!-- Step 2 -->
    <string name="tip2_title">2. The simplest and most effective moves</string>
    <string name="tip2_content">One of the best moves that will make any giant whimper or drop to their knees is grabbing the wrist. Grab the little finger and ring finger with one hand and the middle and index fingers with the other, and bend the wrist forward. If you can’t grab your opponent’s hand, hit them with a fist or finger between the collarbones or into their Adam’s apple.</string>

    <!-- Step 3 -->
    <string name="tip3_title">3. If you were grabbed from the front:</string>
    <string name="tip3_content">If you are grabbed from the front and you can’t lift your hands, move your hands forward and make a fist in front of your pelvis. Then, hit the attacker’s nose with your forehead and the groin with your knee.</string>

    <!-- Step 4 -->
    <string name="tip4_title">4. How to free your hands:</string>
    <string name="tip4_content">You can easily escape a stronghold if you remember the “rule of thumb,” which is to rotate your arm to the side of the attacker’s thumb. When your arm is under the attacker’s, pull your arm as strongly as you can.</string>

    <!-- Step 5 -->
    <string name="tip5_title">5. If you were grabbed from behind:</string>
    <string name="tip5_content">To set yourself free, quickly bend back and try to hit the attacker with the back of your head. If you can’t, grab their leg and pull to make them lose balance.</string>

    <!-- Step 6 -->
    <string name="tip6_title">6. If you were approached and grabbed from the side:</string>
    <string name="tip6_content">Hit the attacker’s temple, jaw, or nose with an arched elbow strike. Then hit the belly or chest and run.</string>

    <!-- Step 7 -->
    <string name="tip7_title">7. If you were pushed against the wall:</string>
    <string name="tip7_content">If cornered, hit vulnerable spots based on your position. Use your palm to strike the armpit, neck, or jaw. A headbutt can also disorient the attacker.</string>
</resources>